<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Checkbox -->
    <CheckBox
        android:id="@+id/form_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms_and_conditions" />

    <!-- Text Input -->
    <EditText
        android:id="@+id/form_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_is_the_bet"
        android:inputType="text" />

    <!-- Number Input -->
    <EditText
        android:id="@+id/form_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_much_we_bettin"
        android:inputType="number" />

    <!-- Date Input -->
    <EditText
        android:id="@+id/form_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_date"
        android:focusable="false"
        android:clickable="true" />

    <!-- Radio Group -->
    <RadioGroup
        android:id="@+id/form_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/radio_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radio_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3" />
    </RadioGroup>
</LinearLayout>
